engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/fields.less
/* Standard input fields. */
textarea,
input[type="text"],
input[type="search"],
input[type="password"],
input[type="number"],
input[type="email"],
input[type="tel"] {
    .appearance(none);
    .border-radius();
    .box-sizing();
	.unitize(19, 16, line-height);
    .unitize(@input-font-size, 16, font-size);
    .unitize-width(290);
    .unitize-padding(10, 10, 9, 10);
    .box-shadow(inset 0 1px 1px @gray-dark);
    background: @input-bg;
    border: 1px solid @input-border;
    border-top-color: darken(@input-border, 5%);
    color: lighten(@text-color, 15%);
    text-align: left;

    &:focus {
        .box-shadow(0 0 0 transparent);
        outline: none;
        border-color: @brand-primary;
        background: #fff;
        color: @text-color;
    }

    &.has--error {
        color: @input-error-color;
        background: @input-error-bg;
        border-color: @input-error-border;
    }

    // Input field spacing
    &.input--field {
        .unitize(10, 16, margin-bottom);
        width: 100%;

        &.input--field-zipcode {
            margin-right: 2%;
            width: 30%;
            float: left;
        }

        &.input--field-city {
            width: 68%;
            float: left;
        }
    }

    &.is--small {
        .unitize(34, 16, height);
    }

    &.is--medium {
        .unitize(38, 16, height);
    }

    &.is--large {
        .unitize(42, 16, height);
    }
}

textarea {
    resize: vertical; // Just allow vertical resizing of the text area
}

label {
    .unitize(@label-font-size, 16, font-size);
    color: @label-color;
}

label.has--error {
    color: @highlight-error;
    background: @input-error-bg;
}

.js--fancy-select {
    .border-radius();
    .box-sizing();
    .unitize-width(290);
    .unitize(40, 16, line-height);
    .white-gradient();
    .clearfix();
    display: inline-block;
    position: relative;
    border: 1px solid @btn-default-border-color;
    overflow: hidden;
    cursor: pointer;
    text-align: left;

    &:hover {
        color: @brand-primary;
        border-color: @brand-primary;
        background: #fff;
    }

    &.js--is--focused {
        color: @brand-primary;
        border-color: @brand-primary;
    }

    select {
        .appearance(none);
        .opacity(0);
        height: auto;
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        width: 100%;
        display: block;
        cursor: pointer;
        z-index: 1000;

        option {
            color: @text-color-dark;
        }

        // Removes the blue glow around the select field
        // see: http://www.faridesign.net/2012/02/remove-border-around-input-chrome-safari/
        &:focus {
            outline: none;
        }
    }

    .js--fancy-select-text {
        .unitize-padding(0, 40, 0, 10);
        width: 100%;

        // CSS truncating
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    .js--fancy-select-trigger {
        .unitize-width(30);
        position: absolute;
        right: 0;
        top: 0;
        border-left: 1px solid @border-color;
        text-align: center;
        font-weight: bold;
    }

    // State disabled
    &.is--disabled {
        .opacity(.5);

        select {
            cursor: not-allowed;
        }
    }

    // Error state
    &.has--error {
        color: @input-error-color;
        border-color: @input-error-border;
        background: @input-error-bg;

        .js--fancy-select-trigger {
            border-color: @input-error-color;
        }

        .js--fancy-select-text {
            border-color: lighten(@input-error-color, 40%);
        }
    }
}

@media screen and (min-width: @tabletViewportWidth) {

    /* Standard input fields. */
    .input--field {
        .unitize(15, 16, margin-bottom);

        .input--field-zipcode {
            margin-right: 2%;
            width: 20%;
        }
        .input--field-city {
            width: 78%;
        }
    }
}

@media screen and (min-width: @desktopViewportWidth) {

    // Input field styling
    .input--field {
        .unitize(15, 16, margin-bottom);
    }
}

